# video-asr-summary

./: .gitignore  CLAUDE.md  FUNASR_GPU_IMPLEMENTATION_SUMMARY.md  README.md  pyproject.toml  requirements.txt  run_tests.py  test_funasr_gpu.py  test_gpu_detection.py
.github/: copilot-instructions.md
docs/: code_quality_improvements.md  code_quality_summary.md  content_analysis.md  diarization_optimization.md  funasr_gpu_acceleration.md  integration_test_audio_management.md  language_aware_asr_implementation.md  llm_model_configuration.md  pipeline_usage.md  segmentation_explained.md  type_annotations_implementation.md  warnings_analysis.md
examples/: analyze_warnings.py  asr_demo.py  audio_processing_demo.py  content_analysis_demo.py  diagnose_pyannote.py  diarization_demo.py  diarization_optimization_demo.py  funasr_gpu_example.py  mps_diarization_demo.py  multilanguage_analysis_demo.py  pipeline_demo.py  pipeline_integration_demo.py  pyannote_diagnostic.py  quick_mps_test.py  segmentation_comparison.py  test_chinese_audio.py  test_diarization_imports.py  test_diarization_integration.py  test_full_pipeline.py  test_mps_acceleration.py  test_real_diarization.py  test_simulated_diarization.py  video_to_text_demo.py
pipeline_demo_output/: pipeline_state.json
prompts/: initial_prompt.md
scripts/: format_check.py  process_video.py  type_check.py
tests/: test_analysis.py  test_asr_processor.py  test_asr_specialized_processor.py  test_audio_extractor.py  test_core.py  test_diarization.py  test_enhanced_transcription_fixes.py  test_funasr_character_alignment.py  test_funasr_processor.py  test_language_aware_asr.py  test_markdown_converter.py  test_orchestrator_diarization_optimization.py  test_orchestrator_enhanced_transcription.py  test_punctuation_aware_segmentation.py  test_punctuation_processor.py  (+3 more)
(+32 files in other folders)
